--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,13 +10,10 @@ header {
 }
 
 main {
-  display: flex;
-  justify-content: center;
   margin-top: 1rem;
 }
 
 #form {
-  display: flex;
   text-align: center;
   flex-direction: column;
   max-width: 400px;
@@ -24,14 +21,13 @@ main {
 }
 
 #graph {
-  width: 300px;
-  height: 200px;
-  margin-block: auto;
+  /* height: 200px; */
+  /* width: 50%; */
 }
 
 #result {
   .card {
-    width: 13rem;
+    margin-inline: auto;
 
     .card-title {
       margin: 0;
@@ -46,11 +42,16 @@ main {
     }
 
     img {
-      height: 13rem;
-      width: 100%;
+      max-height: 20rem;
+      /* width: 100%; */
       object-fit: cover;
+      object-position: center;
     }
   }
+}
+
+#error-section {
+  display: none;
 }
 
 button {
